kubernetes/apps/base/garage/garage-webui/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: garage-webui
  labels:
    app.kubernetes.io/name: garage-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: garage-webui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: garage-webui
    spec:
      containers:
        - name: garage-webui
          image: ghcr.io/keiretsu-labs/kubernetes-manifests/garage-webadmin:latest
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 256Mi
        - name: garage-webadmin-sidecar
          image: ghcr.io/keiretsu-labs/kubernetes-manifests/garage-webadmin-sidecar:latest
          ports:
            - containerPort: 8080
              name: sidecar
          resources:
            requests:
              cpu: 5m
              memory: 16Mi
            limits:
              memory: 64Mi
